--- a/css/mobilefirststyle.css
+++ b/css/mobilefirststyle.css
@@ -48,6 +48,9 @@ a {
     width: fit-content;
     padding: 10px 40px;
 }
+.button:hover {
+    background-color:  rgba(207, 130, 213, 0.6);
+}
 .scroll {
     position: absolute;
     left: 44%;
@@ -56,8 +59,12 @@ a {
 .chirplogo {
     width: 60%;
 }
+
 .navitem {
     flex: 1;
+}
+.navitem:hover {
+    color: rgba(247, 193, 162, 0.7);
 }
 .navlinks {
     display: flex;
